Fixed panel alignment issue.

--- a/quadtreevis.css
+++ b/quadtreevis.css
@@ -49,13 +49,13 @@ svg {
 #quadtreetree {
   background-color: #444;
   border-radius: 4px;
+  float: right;
 }
 
 #quadtreetree .node circle {
   cursor: pointer;
   fill-opacity: 0.8;
   stroke-width: 0px;
-
 }
 
 #quadtreetree .new.node circle {
